update example to reflect data_talk updates

--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "from data_talk import DataLoader, HuggingFaceChain\n",
-    "from langchain_community.llms.huggingface_hub import HuggingFaceHub\n",
     "from dotenv import load_dotenv"
    ]
   },
@@ -28,7 +27,9 @@
     }
    ],
    "source": [
-    "load_dotenv()\n"
+    "# Load environment variables, e.g. HuggingFace API token\n",
+    "\n",
+    "load_dotenv()"
    ]
   },
   {
@@ -46,6 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Model from HuggingFace repo. This could be any model - feel free to play around with different models.\n",
+    "\n",
     "model = \"mistralai/Mixtral-8x7B-Instruct-v0.1\""
    ]
   },
@@ -53,44 +56,47 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/leebarrett/miniforge3/envs/duckdb-llm/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/Users/leebarrett/miniforge3/envs/duckdb-llm/lib/python3.11/site-packages/huggingface_hub/utils/_deprecation.py:127: FutureWarning: '__init__' (from 'huggingface_hub.inference_api') is deprecated and will be removed from version '1.0'. `InferenceApi` client is deprecated in favor of the more feature-complete `InferenceClient`. Check out this guide to learn how to convert your script to use it: https://huggingface.co/docs/huggingface_hub/guides/inference#legacy-inferenceapi-client.\n",
-      "  warnings.warn(warning_message, FutureWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "llm = HuggingFaceHub(repo_id=model, model_kwargs=dict(temperature=1e-3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [],
    "source": [
+    "# create a database connection to an in-memory DuckDB instance and create a table from the file.\n",
+    "\n",
     "loader = DataLoader()\n",
     "loader.create_table_from_file(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leebarrett/miniforge3/envs/duckdb-llm/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token will not been saved to git credential helper. Pass `add_to_git_credential=True` if you want to set the git credential as well.\n",
+      "Token is valid (permission: read).\n",
+      "Your token has been saved to /Users/leebarrett/.cache/huggingface/token\n",
+      "Login successful\n"
+     ]
+    }
+   ],
    "source": [
-    "chain = HuggingFaceChain(llm=llm, db_engine=loader.engine)"
+    "# create a HuggingFace LLM chain that can be used to talk to your data\n",
+    "\n",
+    "chain = HuggingFaceChain(model=model, db_engine=loader.engine)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -133,8 +139,8 @@
       "[(178082.0,)]\n",
       "SELECT \"Semi_Detached_Average_Price\" \n",
       "FROM llm_table \n",
-      "WHERE \"Region_Name\" = 'South Lanarkshire' AND \"Date\" >= '2023-01-01' AND \"Date\" <= '2023-12-31' \n",
-      "ORDER BY \"Semi_Detached_Average_Price\" ASC \n",
+      "WHERE \"Region_Name\" = 'South Lanarkshire' AND \"Date\" >= '2023-01-01' AND \"Date\" <= '2023-12-31'\n",
+      "ORDER BY \"Semi_Detached_Average_Price\" ASC\n",
       "LIMIT 1\n",
       "You are a DuckDB expert. Given an input question, first create a syntactically correct DuckDB query to run, then look at the results of the query and return the answer to the input question.\n",
       "Unless the user specifies in the question a specific number of examples to obtain, query for at most {top_k} results using the LIMIT clause as per DuckDB. You can order the results to return the most informative data in the database.\n",
@@ -161,6 +167,13 @@
     "print(chain.get_query)\n",
     "print(chain.prompt)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
