update example usage

--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_talk import DataLoader, HuggingFaceChain\n",
+    "from src.lang_chain import LangchainChain\n",
+    "from src.data_loader import DataLoader\n",
+    "from src.invoke import sql_chain\n",
     "from dotenv import load_dotenv"
    ]
   },
@@ -86,12 +88,20 @@
       "Your token has been saved to /Users/leebarrett/.cache/huggingface/token\n",
       "Login successful\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leebarrett/miniforge3/envs/duckdb-llm/lib/python3.11/site-packages/duckdb_engine/__init__.py:162: DuckDBEngineWarning: duckdb-engine doesn't yet support reflection on indices\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
     "# create a HuggingFace LLM chain that can be used to talk to your data\n",
     "\n",
-    "chain = HuggingFaceChain(model=model, db_engine=loader.engine)"
+    "chain = LangchainChain(model=model, db_engine=loader.engine)"
    ]
   },
   {
@@ -106,30 +116,21 @@
     "#  question = \"What was the average semi-detached house price in Scotland in 2023?\"\n",
     "#  question = \"What was the highest average price for a detached house in East Renfrewshire in 2023?\"\n",
     "#  question = \"What was the highest average semi-detached house price in East Renfrewshire in 2023?\"\n",
-    "question = \"What was the lowest average semi-detached house price in South Lanarkshire for all of 2023?\""
+    "question = \"What was the lowest average semi-detached house price in South Lanarkshire in all of 2023?\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/leebarrett/miniforge3/envs/duckdb-llm/lib/python3.11/site-packages/duckdb_engine/__init__.py:162: DuckDBEngineWarning: duckdb-engine doesn't yet support reflection on indices\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "response = chain.question(question)"
+    "response = sql_chain(chain=chain, question=question)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -139,8 +140,8 @@
       "[(178082.0,)]\n",
       "SELECT \"Semi_Detached_Average_Price\" \n",
       "FROM llm_table \n",
-      "WHERE \"Region_Name\" = 'South Lanarkshire' AND \"Date\" >= '2023-01-01' AND \"Date\" <= '2023-12-31'\n",
-      "ORDER BY \"Semi_Detached_Average_Price\" ASC\n",
+      "WHERE \"Region_Name\" = 'South Lanarkshire' AND \"Date\" >= '2023-01-01' AND \"Date\" <= '2023-12-31' \n",
+      "ORDER BY \"Semi_Detached_Average_Price\" ASC \n",
       "LIMIT 1\n",
       "You are a DuckDB expert. Given an input question, first create a syntactically correct DuckDB query to run, then look at the results of the query and return the answer to the input question.\n",
       "Unless the user specifies in the question a specific number of examples to obtain, query for at most {top_k} results using the LIMIT clause as per DuckDB. You can order the results to return the most informative data in the database.\n",
@@ -163,8 +164,10 @@
     }
    ],
    "source": [
+    "# access class attributes to see the generated SQL query and the prompt that was passed to the LLM\n",
+    "\n",
     "print(response)\n",
-    "print(chain.get_query)\n",
+    "print(chain.sql_query)\n",
     "print(chain.prompt)"
    ]
   },
