--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -2,32 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.lang_chain import LangchainChain\n",
     "from src.data_loader import DataLoader\n",
-    "from src.invoke import sql_chain\n",
     "from dotenv import load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load environment variables, e.g. HuggingFace API token\n",
     "\n",
@@ -36,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,36 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/leebarrett/miniforge3/envs/duckdb-llm/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Token will not been saved to git credential helper. Pass `add_to_git_credential=True` if you want to set the git credential as well.\n",
-      "Token is valid (permission: read).\n",
-      "Your token has been saved to /Users/leebarrett/.cache/huggingface/token\n",
-      "Login successful\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/leebarrett/miniforge3/envs/duckdb-llm/lib/python3.11/site-packages/duckdb_engine/__init__.py:162: DuckDBEngineWarning: duckdb-engine doesn't yet support reflection on indices\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create a HuggingFace LLM chain that can be used to talk to your data\n",
     "\n",
@@ -106,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,54 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = sql_chain(chain=chain, question=question)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(178082.0,)]\n",
-      "SELECT \"Semi_Detached_Average_Price\" \n",
-      "FROM llm_table \n",
-      "WHERE \"Region_Name\" = 'South Lanarkshire' AND \"Date\" >= '2023-01-01' AND \"Date\" <= '2023-12-31' \n",
-      "ORDER BY \"Semi_Detached_Average_Price\" ASC \n",
-      "LIMIT 1\n",
-      "You are a DuckDB expert. Given an input question, first create a syntactically correct DuckDB query to run, then look at the results of the query and return the answer to the input question.\n",
-      "Unless the user specifies in the question a specific number of examples to obtain, query for at most {top_k} results using the LIMIT clause as per DuckDB. You can order the results to return the most informative data in the database.\n",
-      "Never query for all columns from a table. You must query only the columns that are needed to answer the question. Wrap each column name in double quotes (\") to denote them as delimited identifiers.\n",
-      "Pay attention to use only the column names you can see in the tables below. Be careful to not query for columns that do not exist. Also, pay attention to which column is in which table.\n",
-      "Pay attention to use today() function to get the current date, if the question involves \"today\".\n",
-      "\n",
-      "Use the following format:\n",
-      "\n",
-      "Question: Question here\n",
-      "SQLQuery: SQL Query to run\n",
-      "SQLResult: Result of the SQLQuery\n",
-      "Answer: Final answer here\n",
-      "\n",
-      "Only use the following tables:\n",
-      "{table_info}\n",
-      "\n",
-      "Question: {input}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# access class attributes to see the generated SQL query and the prompt that was passed to the LLM\n",
-    "\n",
-    "print(response)\n",
-    "print(chain.sql_query)\n",
-    "print(chain.prompt)"
+    "response = chain.query(query_str=question)"
    ]
   },
   {
@@ -176,7 +94,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# access class attributes to see the generated SQL query and the prompt that was passed to the LLM\n",
+    "\n",
+    "print(response)\n",
+    "print(chain.sql_query)\n",
+    "print(chain.prompt)"
+   ]
   }
  ],
  "metadata": {
